Complete header part
Complete header design part with addition of a logo.png image plus adding navbars and designing other parts of website header UI

--- a/index.html
+++ b/index.html
@@ -5,8 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download website</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/all.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navbar navbar-default top-nav">
+            <div class="header-container">
+                <ul class="menu">
+                    <li><a href="#">خانه</a></li>
+                    <li><a href="#">انجمن</a></li>
+                    <li><a href="#">تبلیغات</a></li>
+                    <li><a href="#">تماس با ما</a></li>
+                </ul>
+                <div class="social-icons">
+                    <ul>
+                        <li><a href="#"><div class="fa-brands fa-facebook fa-2x"></div></a></li>
+                        <li><a href="#"><div class="fa-brands fa-square-google-plus fa-2x"></div></a></li>
+                        <li><a href="#"><div class="fa-brands fa-github fa-2x"></div></a></li>
+                        <li><a href="#"><div class="fa-brands fa-instagram fa-2x"></div></a></li>
+                        <li><a href="#"><div class="fa-brands fa-twitter fa-2x"></div></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="face">
+            <div class="logo">
+                <a href="#"><img width="180px"src="./img/logo/logo.png" alt="Download website"></a>
+            </div>
+        </div>
+        <nav class="navbar navbar-default main-nav container">
+            <ul>
+                <li><a href="#"><div class="fa-brands fa-windows"></div> نرم افزار</a></li>
+                <li><a href="#"><div class="fa fa-mobile"></div> موبایل</a></li>
+                <li><a href="#"><div class="fa fa-gamepad"></div> بازی</a></li>
+                <li><a href="#"><div class="fa fa-play"></div> آموزشی</a></li>
+            </ul>
+            <!-- Contains search + light and dark mode -->
+            <div class="tools">
+                <!-- Nightmode toggle button -->
+                <a href="#"><div class="fa fa-moon"></div></a>
+                <!-- Search button will pop search form -->
+                <div class="search">
+                    <a href="#">
+                        <span>جستجو...</span>
+                        <div class="fa fa-magnifying-glass"></div>
+                    </a>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
