Update index.html and style.css
Add side bar and pagination to page

--- a/index.html
+++ b/index.html
@@ -369,12 +369,80 @@
                     <!-- End of post footer section -->
                 </section>
                 <!-- End of post card section -->
+                <nav class="pagination-wrapper">
+                    <ul>
+                        <li class="active">1</li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+                        <li><a href="#">4</a></li>
+                        <li><a href="#">بعدی</a></li>
+                        <li><a href="#">»</a></li>
+                    </ul>
+                </nav>
             </section>
             <!-- End of posts section -->
             <section class="sidebar">
                 <aside class="side-ads">
                     <a href="#"><img src="./img/ADS/downloadha.gif" alt="ADS"></a>
                 </aside>
+                <!-- Sidebar starts here -->
+                <aside class="side-card">
+                    <h2>عنوان ساید بار</h2>
+                    <hr>
+                    <div class="side-menu">
+                        <ul>
+                            <li><a href="#">عنوان آیتم 1</a></li>
+                            <li><a href="#">عنوان آیتم 2</a></li>
+                            <li><a href="#">عنوان آیتم 3</a></li>
+                            <li><a href="#">عنوان آیتم 4</a></li>
+                            <li><a href="#">عنوان آیتم 5</a></li>
+                            <li><a href="#">عنوان آیتم 6</a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <aside class="side-card">
+                    <h2>عنوان ساید بار</h2>
+                    <hr>
+                    <div class="side-menu">
+                        <ul>
+                            <li><a href="#">عنوان آیتم 1</a></li>
+                            <li><a href="#">عنوان آیتم 2</a></li>
+                            <li><a href="#">عنوان آیتم 3</a></li>
+                            <li><a href="#">عنوان آیتم 4</a></li>
+                            <li><a href="#">عنوان آیتم 5</a></li>
+                            <li><a href="#">عنوان آیتم 6</a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <aside class="side-card">
+                    <h2>عنوان ساید بار</h2>
+                    <hr>
+                    <div class="side-menu">
+                        <ul>
+                            <li><a href="#">عنوان آیتم 1</a></li>
+                            <li><a href="#">عنوان آیتم 2</a></li>
+                            <li><a href="#">عنوان آیتم 3</a></li>
+                            <li><a href="#">عنوان آیتم 4</a></li>
+                            <li><a href="#">عنوان آیتم 5</a></li>
+                            <li><a href="#">عنوان آیتم 6</a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <aside class="side-card">
+                    <h2>عنوان ساید بار</h2>
+                    <hr>
+                    <div class="side-menu">
+                        <ul>
+                            <li><a href="#">عنوان آیتم 1</a></li>
+                            <li><a href="#">عنوان آیتم 2</a></li>
+                            <li><a href="#">عنوان آیتم 3</a></li>
+                            <li><a href="#">عنوان آیتم 4</a></li>
+                            <li><a href="#">عنوان آیتم 5</a></li>
+                            <li><a href="#">عنوان آیتم 6</a></li>
+                        </ul>
+                    </div>
+                </aside>
+                <!-- Sidebar ends here -->
             </section>
         </div>
     </section>
