--- a/index.html
+++ b/index.html
@@ -446,5 +446,87 @@
             </section>
         </div>
     </section>
+    <footer class="footer">
+        <!-- Tab menu -->
+        <div class="tab-menu">
+            <div class="container">
+                <ul>
+                    <li><a href="#">نرم افزار</a></li>
+                    <li><a href="#">موبایل</a></li>
+                    <li><a href="#">بازی</a></li>
+                    <li><a href="#">مولتی مدیا</a></li>
+                </ul>
+                <div class="sub-menu">
+                    <ul>
+                        <li><a href="#">آیتم زیر منو</a></li>
+                        <li><a href="#">آیتم زیر منو</a></li>
+                        <li><a href="#">آیتم زیر منو</a></li>
+                        <li><a href="#">آیتم زیر منو</a></li>
+                        <li><a href="#">آیتم زیر منو</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <!-- End of tab menu -->
+        <div class="footer-mid">
+            <div class="container">
+                <div class="footer-row">
+                    <div class="footer-column">
+                        <h2>آمار سایت</h2>
+                        <ul>
+                            <li><div class="fa fa-pen"></div> تعداد مطالب: <span>213241</span></li>
+                            <li><div class="fa fa-comment"></div> تعداد نظرات: <span>2334</span></li>
+                            <li><div class="fa fa-eye"></div> تعداد افراد آنلاین: <span>122</span></li>
+                        </ul>
+                    </div>
+                    <div class="footer-column">
+                        <h2>منو سایت</h2>
+                        <ul>
+                            <li><a href="#">خانه</a></li>
+                            <li><a href="#">انجمن</a></li>
+                            <li><a href="#">تبلیغات</a></li>
+                            <li><a href="#">تماس با ما</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-column news">
+                        <h2>خبرنامه</h2>
+                        <div>جهت دریافت مطالب جدید، ایمیل خود را وارد کنید</div>
+                        <input type="email" placeholder="ایمیل خود را وارد کنید">
+                    </div>
+                </div>
+                <div class="footer-row">
+                    <div class="footer-column">
+                        <h2>حمایت از ما</h2>
+                        <a href="#">آیتم منو شماره 1</a>
+                    </div>
+                    <div class="footer-column social-icons">
+                        <h2>شبکه های اجتماعی</h2>
+                        <ul>
+                            <li><a href="#"><div class="fa-brands fa-instagram fa-2x"></div></a></li>
+                            <li><a href="#"><div class="fa-brands fa-twitter fa-2x"></div></a></li>
+                            <li><a href="#"><div class="fa-brands fa-square-google-plus fa-2x"></div></a></li>
+                            <li><a href="#"><div class="fa-brands fa-facebook fa-2x"></div></a></li>
+                            <li><a href="#"><div class="fa-brands fa-github fa-2x"></div></a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-column news">
+                        <h2>تماس با ما</h2>
+                        <form class="">
+                            <label for="name">نام</label>
+                            <input name="name" type="text" placeholder="نام خود را وارد کنید" id="name">
+                        
+                            <label for="email">ایمیل</label>
+                            <input name="email" type="email" placeholder="ایمیل خود را وارد کنید" id="email">
+
+                            <label for="message">پیام</label>
+                            <textarea name="message" id="message" cols="30" rows="3" placeholder="پیام خود را وارد کنید"></textarea>
+
+                            <button class="send-btn">ارسال</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
