Update index.html and style.css
Add text-ads sidebar to the sidebar

--- a/index.html
+++ b/index.html
@@ -442,6 +442,17 @@
                         </ul>
                     </div>
                 </aside>
+                <aside class="side-ads-bottom">
+                    <div class="side-ad">
+                        <a href="#">محل تبلیغات متنی</a>
+                    </div>
+                    <div class="side-ad">
+                        <a href="#">محل تبلیغات متنی</a>
+                    </div>
+                    <div class="side-ad">
+                        <a href="#">محل تبلیغات متنی</a>
+                    </div>
+                </aside>
                 <!-- Sidebar ends here -->
             </section>
         </div>
