--- a/index.html
+++ b/index.html
@@ -538,6 +538,9 @@
                 </div>
             </div>
         </div>
+        <div class="copyright">
+            &copy 2023 تمامی حقوق محفوظ می‌باشد
+        </div>
     </footer>
 </body>
 </html>
