update index.html and style.css
Some menus have to be gone. Because we don't need them in mobile version. also footer elements are now in one column. I also added .site-menu class. site-menu class make me able to hide it from mobile users because I set it's display to none

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                             <li><div class="fa fa-eye"></div> تعداد افراد آنلاین: <span>122</span></li>
                         </ul>
                     </div>
-                    <div class="footer-column">
+                    <div class="footer-column site-menu">
                         <h2>منو سایت</h2>
                         <ul>
                             <li><a href="#">خانه</a></li>
