Update index.html and style.css
Start making mobile menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <nav class="navbar navbar-default main-nav container">
-            <ul>
+            <ul class="desktop-menu">
                 <li><a href="#"><div class="fa-brands fa-windows"></div> نرم افزار</a></li>
                 <li><a href="#"><div class="fa fa-mobile"></div> موبایل</a></li>
                 <li><a href="#"><div class="fa fa-gamepad"></div> بازی</a></li>
@@ -52,6 +52,17 @@
                     </a>
                 </div>
             </div>
+        </nav>
+        <nav class="mobile-nav">
+            <div class="menu-btn">
+                <div class="fa fa-bars fa-1x"></div>
+            </div>
+            <ul class="mobile-menu">
+                <li><a href="#"><div class="fa-brands fa-windows"></div> نرم افزار</a></li>
+                <li><a href="#"><div class="fa fa-mobile"></div> موبایل</a></li>
+                <li><a href="#"><div class="fa fa-gamepad"></div> بازی</a></li>
+                <li><a href="#"><div class="fa fa-play"></div> آموزشی</a></li>
+            </ul>
         </nav>
     </header>
     <section class="body">
