--- a/index.html
+++ b/index.html
@@ -55,14 +55,25 @@
         </nav>
         <nav class="mobile-nav">
             <div class="menu-btn">
-                <div class="fa fa-bars fa-1x"></div>
+                <a href="#" onclick="toggle_menu()"><div class="fa fa-bars fa-1x"></div></a>
             </div>
-            <ul class="mobile-menu">
+            <ul class="mobile-menu" id="mobile-menu">
                 <li><a href="#"><div class="fa-brands fa-windows"></div> نرم افزار</a></li>
                 <li><a href="#"><div class="fa fa-mobile"></div> موبایل</a></li>
                 <li><a href="#"><div class="fa fa-gamepad"></div> بازی</a></li>
                 <li><a href="#"><div class="fa fa-play"></div> آموزشی</a></li>
             </ul>
+            <div class="tools" id="tools">
+                <!-- Nightmode toggle button -->
+                <a href="#"><div class="fa fa-moon"></div></a>
+                <!-- Search button will pop search form -->
+                <div class="search">
+                    <a href="#">
+                        <span>جستجو...</span>
+                        <div class="fa fa-magnifying-glass"></div>
+                    </a>
+                </div>
+            </div>
         </nav>
     </header>
     <section class="body">
@@ -554,4 +565,5 @@
         </div>
     </footer>
 </body>
+<script src="./js/main.js"></script>
 </html>
