--- a/index.html
+++ b/index.html
@@ -484,18 +484,45 @@
         <div class="tab-menu">
             <div class="container">
                 <ul>
-                    <li><a href="#">نرم افزار</a></li>
-                    <li><a href="#">موبایل</a></li>
-                    <li><a href="#">بازی</a></li>
-                    <li><a href="#">مولتی مدیا</a></li>
+                    <li><div onclick="submenu_manager('submenu-1')" class="menu-item">نرم افزار</div></li>
+                    <li><div onclick="submenu_manager('submenu-2')" class="menu-item">موبایل</div></li>
+                    <li><div onclick="submenu_manager('submenu-3')" class="menu-item">بازی</div></li>
+                    <li><div onclick="submenu_manager('submenu-4')" class="menu-item">مولتی مدیا</div></li>
                 </ul>
-                <div class="sub-menu">
+                <div class="sub-menu" id="sub-menu-1">
                     <ul>
-                        <li><a href="#">آیتم زیر منو</a></li>
-                        <li><a href="#">آیتم زیر منو</a></li>
-                        <li><a href="#">آیتم زیر منو</a></li>
-                        <li><a href="#">آیتم زیر منو</a></li>
-                        <li><a href="#">آیتم زیر منو</a></li>
+                        <li><a href="#">آیتم زیر منو 1</a></li>
+                        <li><a href="#">آیتم زیر منو 1</a></li>
+                        <li><a href="#">آیتم زیر منو 1</a></li>
+                        <li><a href="#">آیتم زیر منو 1</a></li>
+                        <li><a href="#">آیتم زیر منو 1</a></li>
+                    </ul>
+                </div>
+                <div class="sub-menu" id="sub-menu-2">
+                    <ul>
+                        <li><a href="#">آیتم زیر منو 2</a></li>
+                        <li><a href="#">آیتم زیر منو 2</a></li>
+                        <li><a href="#">آیتم زیر منو 2</a></li>
+                        <li><a href="#">آیتم زیر منو 2</a></li>
+                        <li><a href="#">آیتم زیر منو 2</a></li>
+                    </ul>
+                </div>
+                <div class="sub-menu" id="sub-menu-3">
+                    <ul>
+                        <li><a href="#">آیتم زیر منو 3</a></li>
+                        <li><a href="#">آیتم زیر منو 3</a></li>
+                        <li><a href="#">آیتم زیر منو 3</a></li>
+                        <li><a href="#">آیتم زیر منو 3</a></li>
+                        <li><a href="#">آیتم زیر منو 3</a></li>
+                    </ul>
+                </div>
+                <div class="sub-menu" id="sub-menu-4">
+                    <ul>
+                        <li><a href="#">آیتم زیر منو 4</a></li>
+                        <li><a href="#">آیتم زیر منو 4</a></li>
+                        <li><a href="#">آیتم زیر منو 4</a></li>
+                        <li><a href="#">آیتم زیر منو 4</a></li>
+                        <li><a href="#">آیتم زیر منو 4</a></li>
                     </ul>
                 </div>
             </div>
