Update single page
Add comment section

--- a/single.html
+++ b/single.html
@@ -222,6 +222,28 @@
                     <!-- End of post footer section -->
                 </section>
                 <!-- End of post card section -->
+                <section class="post-card relative-posts">
+                    <h2>مطالب مشابه</h2>
+                    <hr>
+                    <ul>
+                        <li><a href="#">عنوان پست</a></li>
+                        <li><a href="#">عنوان پست 2</a></li>
+                        <li><a href="#">عنوان پست 3</a></li>
+                    </ul>
+                </section>
+                <section class="post-card comments-section">
+                    <h2>نظرات</h2>
+                    <hr>
+                    <form class="comment-form">
+                        <label class="your-comment" for="comment">نظر شما</label>
+                        <textarea name="comment" rows="4" placeholder="نظر شما" id="comment"></textarea>
+                        <label class="name" for="name">نام شما</label>
+                        <input type="text" placeholder="نام شما" id="name" name="name" class="input">
+                        <label class="email" for="email">ایمیل شما</label>
+                        <input type="email" name="email" id="email" placeholder="ایمیل شما" class="input">
+                        <input type="button" value="ارسال نظر" id="send-comment-btn">
+                    </form>
+                </section>
             </section>
             <!-- End of posts section -->
             <section class="sidebar">
