Complete comments section in single.html and single.css

--- a/single.html
+++ b/single.html
@@ -244,6 +244,73 @@
                         <input type="button" value="ارسال نظر" id="send-comment-btn">
                     </form>
                 </section>
+                <section class="post-card comments-list">
+                    <h2>نظرات</h2>
+                    <hr>
+                    <div class="comment-meta">
+                        <h4>نام نظر دهنده</h4>
+                        <div class="comment-date">1402/4/18</div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        </p>
+                        <div class="comment-btns">
+                            <div class="reply">
+                                <a href="#">پاسخ</a>
+                            </div>
+                            <div class="report">
+                                <a href="#">گزارش</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="comment-meta">
+                        <h4>نام نظر دهنده</h4>
+                        <div class="comment-date">1402/4/18</div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        </p>
+                        <div class="comment-btns">
+                            <div class="reply">
+                                <a href="#">پاسخ</a>
+                            </div>
+                            <div class="report">
+                                <a href="#">گزارش</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="comment-meta">
+                        <h4>نام نظر دهنده</h4>
+                        <div class="comment-date">1402/4/18</div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        </p>
+                        <div class="comment-btns">
+                            <div class="reply">
+                                <a href="#">پاسخ</a>
+                            </div>
+                            <div class="report">
+                                <a href="#">گزارش</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="comment-meta">
+                        <h4>نام نظر دهنده</h4>
+                        <div class="comment-date">1402/4/18</div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد وزمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                        </p>
+                        <div class="comment-btns">
+                            <div class="reply">
+                                <a href="#">پاسخ</a>
+                            </div>
+                            <div class="report">
+                                <a href="#">گزارش</a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
             <!-- End of posts section -->
             <section class="sidebar">
