Update single page
Add comments navigation buttons

--- a/single.html
+++ b/single.html
@@ -310,6 +310,10 @@
                             </div>
                         </div>
                     </div>
+                    <div class="comments-nav-btn">
+                        <div class="newer-comments"><a href="#">نظرات جدید</a></div>
+                        <div class="recent-comments"><a href="#">نظرات قبلی</a></div>
+                    </div>
                 </section>
             </section>
             <!-- End of posts section -->
