Add go to top button with smoothness

--- a/index.html
+++ b/index.html
@@ -590,6 +590,9 @@
         <div class="copyright">
             &copy 2023 تمامی حقوق محفوظ می‌باشد
         </div>
+        <div class="gotop">
+            <i class="fa fa-arrow-up"></i>
+        </div>
     </footer>
 </body>
 <script src="./js/main.js"></script>
