Update index.html, style.css, main.js
Fix search modal for desktop

--- a/index.html
+++ b/index.html
@@ -46,10 +46,20 @@
                 <a href="#"><div class="fa fa-moon"></div></a>
                 <!-- Search button will pop search form -->
                 <div class="search">
-                    <a href="#">
+                    <div href="#">
                         <span>جستجو...</span>
                         <div class="fa fa-magnifying-glass"></div>
-                    </a>
+                    </div>
+                </div>
+            </div>
+            <div id="search-modal">
+                <div class="searchbar">
+                    <form>
+                        <input type="text" placeholder="جستجو...">
+                        <button>
+                            <i class="fa fa-magnifying-glass"></i>
+                        </button>
+                    </form>
                 </div>
             </div>
         </nav>
