--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Search modal -->
             <div id="search-modal">
                 <div class="searchbar">
                     <form>
@@ -62,6 +64,7 @@
                     </form>
                 </div>
             </div>
+            
         </nav>
         <nav class="mobile-nav">
             <div class="menu-btn">
