--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
             <!-- Search modal -->
             <div id="search-modal">
+                <div id="search-modal-close-btn">
+                    &times;
+                </div>
                 <div class="searchbar">
                     <form>
                         <input type="text" placeholder="جستجو...">
@@ -64,7 +67,7 @@
                     </form>
                 </div>
             </div>
-            
+
         </nav>
         <nav class="mobile-nav">
             <div class="menu-btn">
